fix: CSS break on 2 months

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -247,8 +247,7 @@ body {
   transition: none !important;
 }
 
-.events-red,
-.events-blue,
+.right-event-x,
 .right-header,
 .group-collapse-btn,
 .icon-name,
